[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = "0.12.5"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
tokio = {version = "1.38.0" , features = ["full"] }
sqlx ={version="0.6.3" , features = ["postgres", "runtime-tokio-rustls"]} 
